# nokia-2015

./: .travis.yml  CMakeLists.txt  README.md
finals/: CMakeLists.txt  README.md
finals/agent/: Context.hpp  ContextFwd.hpp  GameState.hpp  MapState.hpp  Order.hpp  Resources.hpp  Unit.hpp
finals/doc/: MainLoop.md
finals/gui/: SFMLFrontEnd.cpp  SFMLFrontEnd.hpp  main.cpp
finals/info/NokiaVaros/: NokiaVaros.sln
finals/info/NokiaVaros/NokiaVaros/: Comm.cpp  Comm.h  NokiaVaros.vcxproj  Player.cpp  Player.h  Utasitas.cpp  VilagDef.cpp  VilagDef.h  main.cpp
finals/src/: Agent.cpp  Agent.hpp  Building.hpp  Capabilities.hpp  Context.cpp  Context.hpp  ContextFwd.hpp  GameManager.cpp  GameManager.hpp  GameState.cpp  GameState.hpp  Improvement.hpp  Log.hpp  MapState.cpp  MapState.hpp  Model.cpp  Model.hpp  Order.hpp  Position.hpp  Resources.hpp  SFMLFrontEnd.cpp  SFMLFrontEnd.hpp  Unit.cpp  Unit.hpp  Utasitas.cpp  Utasitas.h  run.cpp
finals/src/agent/: Capabilities.hpp  Context.cpp  Context.hpp  ContextFwd.hpp  GameState.cpp  GameState.hpp  MapState.cpp  MapState.hpp  Order.hpp  Resources.hpp  Unit.cpp  Unit.hpp
finals/test/: MapStateTest.cpp  main.cpp  testTest.cpp
qualif/task-3/: main.cpp  output.txt
qualif/task-4/: main.cpp  solved.txt  solved_.txt  task4-2.txt
qualif/task-6/: output.txt
qualif/task-7/: task7.txt
qualif/task-7/bxlx/: main.cpp
qualif/task-8/: main.cpp  output.txt
qualif/task-9/: main.cpp  task9.txt
qualif/task-9/bxlx/: main.cpp  sol.txt  tree.txt  twoleveltree.txt
task-3/: matek_bizonyitas.txt
task-4/: asd.txt  main.cpp  solved_.txt  task4-1.txt  task4-2.txt
task-5/: main.cpp  output.txt
task-6/: main.cpp  output_maybe_bad.txt
task-7/: Graph.hpp  main.cpp  task7.txt
task-8/: main.cpp  output.txt
task-9/: main.cpp
task-9/bxlx/: complete5gon.txt  main.cpp  output.txt  sol.txt  task9.txt
task-buvos-kodnegyzet/: main.cpp
task-fun-nokia/: main.cpp
